// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiResizableContainer can adjust button spacing 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeSmall euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be controlled externally 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can be vertical 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--vertical testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:100%;height:50%;min-width:0;min-height:0px"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press up or down to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--vertical"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:100%;height:50%;min-width:0;min-height:0px"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have more than two panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:33%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:33%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:33%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      And again
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have scrollable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer can have toggleable panels 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--collapsible euiResizablePanel--middle"
    id="generated-id"
    style="width:20%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Sidebar
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeSmall euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:80%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Sidebar content
    </div>
  </div>
</div>
`;

exports[`EuiResizableContainer is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiResizableContainer euiResizableContainer--horizontal testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      Testing
    </div>
  </div>
  <button
    aria-label="Press left or right to adjust panels size"
    class="euiResizableButton euiResizableButton--sizeMedium euiResizableButton--horizontal"
    data-test-subj="splitPanelResizer"
    id="generated-id"
    type="button"
  />
  <div
    class="euiResizablePanel euiResizablePanel--middle"
    id="generated-id"
    style="width:50%;height:auto;min-width:0px;min-height:0"
  >
    <div
      class="euiResizablePanel__content"
    >
      123
    </div>
  </div>
</div>
`;
